// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemasMap should match the snapshot of the createWidget schema 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "config": {
      "additionalProperties": true,
      "description": "Widget Config",
      "properties": {},
      "type": "object",
    },
    "data": {
      "$ref": "#/properties/widgetProps",
    },
    "widgetProps": {
      "additionalProperties": true,
      "description": "This defines the widget's component props ( @Input )",
      "properties": {},
      "type": "object",
    },
  },
  "required": [
    "config",
  ],
  "type": "object",
}
`;

exports[`SchemasMap should match the snapshot of the editWidget schema 1`] = `
{
  "additionalProperties": false,
  "properties": {
    "config": {
      "additionalProperties": true,
      "description": "Widget Config",
      "properties": {},
      "type": "object",
    },
    "data": {
      "$ref": "#/properties/widgetProps",
    },
    "id": {
      "description": "Widget's ID",
      "type": "string",
    },
    "version": {
      "description": "Widget's Version",
      "type": "string",
    },
    "widgetProps": {
      "additionalProperties": true,
      "description": "This defines the widget's component props ( @Input )",
      "properties": {},
      "type": "object",
    },
  },
  "required": [
    "config",
    "version",
    "id",
    "widgetProps",
  ],
  "type": "object",
}
`;
